gameAdd works, Register Works, Player Info works
